Melhorias na implementação das daos e implementação das dtos praticamente prontas